# hybrid-agentic-swarm-v2

./: LICENSE  README.md  pyproject.toml
diagrams/: has_v2_conceptual.mmd  has_v2_control_flow.mmd  has_v2_layered_architecture.mmd
docs/: ARCHITECTURE.md  CONTRACTS.md  MIGRATION_V1_TO_V2.md
examples/: quickstart_dispatch.py
policies/: action_classes.rego
src/has/: __init__.py  contracts.py  guardrails.py  orchestrator.py  policy.py  reward.py  substrate.py  swarm.py  telemetry.py  workers.py
tests/: test_smoke.py
